--- a/index.html
+++ b/index.html
@@ -9,8 +9,52 @@
     <title>CaloCalotor😐</title>
 </head>
 <body>
-    <h1 class="Title">Calculator</h1>
-    <div class="Basic-Operations">
+    <div class="header">
+        <h1 class="Title">Simple Calculator</h1>
+    </div>
+    <div class="Modes">
+        <ol class="Modes-Section">
+            <li><h1 class="Modes-Title">Modes</h1></li>
+            <li><button class="Mode-Button">+ / -</button></li>
+            <li><button class="Mode-Button">+ / -</button></li>
+            <li><button class="Mode-Button">+ / -</button></li>
+        </ol>
+    </div>
+
+    <div class="Results">
+        <ol class="Results-Section">
+            <li>
+                <h1 class="Results-Header">Input</h1>
+                <ol class="Results-Input">
+                    <li class="Input-Field">
+                        <label for="First-Number">Your First Number</label>
+                        <input class="Simple-Number-Input" id="First-Number" type="text">
+                    </li>
+                    <li class="Input-Field">
+                        <label for="Second-Number">Your Second Number</label>
+                        <input class="Simple-Number-Input" id="Second-Number" type="text">
+                    </li>
+                </ol>
+            </li>
+            <li>
+                <h1 class="Results-Header">Output</h1>
+                <ol>
+                    <li>1</li>
+                    <li>2</li>
+                    <li>3</li>
+                </ol>
+            </li>
+            <li>
+                <h1 class="Results-Header">History</h1>
+                <ol>
+                    <li>1</li>
+                    <li>2</li>
+                    <li>3</li>
+                </ol>
+            </li>
+        </ol>
+    </div>
+    <!-- <div class="Basic-Operations">
         <button onclick="advanced_add()" id="addition">Addition</button>
         <button onclick="advanced_subtract()" id="subtraction">Subtraction</button>
         <button onclick="advanced_division()" id="division">Division</button>
@@ -39,7 +83,7 @@
             <button onclick="advanced_power()" id="power">Power</button>
             <button onclick="advanced_root()" id="root">Root</button>
         </div>
-    </div>
+    </div> -->
     
     <div class="Styling">
         <div class="Styling-Block">1</div>
