--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
                 <ol class="Results-Input">
                     <li class="Input-Field">
                         <label for="First-Number">Your First Number</label>
-                        <input class="Simple-Number-Input" id="First-Number" type="text">
+                        <input class="Simple-Number-Input" id="First-Number" type="text" placeholder="First Number here!">
                     </li>
                     <li class="Input-Field">
                         <label for="Second-Number">Your Second Number</label>
-                        <input class="Simple-Number-Input" id="Second-Number" type="text">
+                        <input class="Simple-Number-Input" id="Second-Number" type="text" placeholder="Second Number here!">
                     </li>
                 </ol>
             </li>
