--- a/index.html
+++ b/index.html
@@ -38,10 +38,44 @@
             </li>
             <li>
                 <h1 class="Results-Header">Output</h1>
-                <ol>
-                    <li>1</li>
-                    <li>2</li>
-                    <li>3</li>
+                <ol class="Results-Output">
+                    <li>
+                        <div class="Output-Field">
+                            <label for="">1</label>
+                            <p class="Number-Output" >5</p>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="Output-Field">
+                            <label for="">1</label>
+                            <p class="Number-Output" >5</p>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="Output-Field">
+                            <label for="">1</label>
+                            <p class="Number-Output" >5</p>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="Output-Field">
+                            <label for="">1</label>
+                            <p class="Number-Output" >5</p>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="Output-Field">
+                            <label for="">1</label>
+                            <p class="Number-Output" >5</p>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="Output-Field">
+                            <label for="">1</label>
+                            <p class="Number-Output"></p>
+                        </div>
+                    </li>
+                    
                 </ol>
             </li>
             <li>
