--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <script src="app.js"></script>
-    <title>CaloCalotor😐</title>
+    <title>Simple calculator</title>
 </head>
 <body>
     <div class="header">
